# anki-lang-gen

./: Cargo.toml  README.md
src/: main.rs
src/services/: mod.rs  oai_chat.rs
