[package]
name = "anki-read-gen"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0.130", features = ["derive"] }
serde_json = "1.0.72"
anyhow = "1.0.75"
async-openai = "0.17.1"
html_parser = "0.7.0"
